--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
    font-family: 'Montagu Slab', serif;
  }
  h1 {
-   font-size:1.70rem;
+   font-size:1.50rem;
    font-family: 'Montagu Slab';
    line-height: 1.2;
    font-weight: 500;
@@ -19,19 +19,26 @@
    margin-bottom: 0;
  }
 	#map { position: absolute; top: 0; bottom: 0; width: 100%; }
+ .maplibregl-popup {
+   padding-top: 10px;
+   background-color: white;
+   box-shadow: 0 0 20px #222;
+ }
  .maplibregl-popup-content {
    max-height: 77vh;
    overflow-y: auto;
    max-width: 	35vw;
    overflow-x: hidden;
-   box-shadow: 0 0 10px #333;
+   box-shadow: none !important;
+   scrollbar-color: grey white;
+   padding: 0 10px;
  }
  .mapboxgl-popup-close-button {
    font-size: 2rem;
    font-family: 'Railway';
    font-weight: 500;
-   background-color: rgba(256,256,256,0.8) !important;
-
+   background-color: rgba(256,256,256,1) !important;
+   position: fixed;
  }
  @media screen and (orientation: portrait) and (max-width: 1199px) {
    .maplibregl-popup-content {
